--- a/admin-portal/verification.html
+++ b/admin-portal/verification.html
@@ -12,6 +12,7 @@
             @theme {
               --color-booker: #2356AA;
             }
+            @import "tailwindcss"  prefix(tw);
           </style>
         <link rel="shortcut icon" type="image/x-icon" href="https://www.booker.co.uk/images/favicon.ico" />
         <!-- Styles -->
@@ -53,60 +54,60 @@
         </style>
     </head>
     
-    <body class="bg-gray-50 px-4 font-[Lato]">
-      <div class="flex items-center justify-center p-8">
-        <img class="h-12 flex justify-center items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
+    <body class="tw:bg-gray-50 tw:px-4 tw:font-[Lato]">
+      <div class="tw:flex tw:items-center tw:justify-center tw:p-8">
+        <img class="tw:h-12 tw:flex tw:justify-center tw:items-center" src="https://assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg">
       </div>
-      <h2 class="text-2xl font-bold text-gray-900 mb-8 text-center">Login Verification</h2>
-      <div class="flex justify-center bg-white relative border-solid border border-gray-50 shadow-sm border border-slate-100 rounded-lg max-w-lg m-auto p-8">
-        <div class="max-w-sm w-full">
+      <h2 class="tw:text-2xl tw:font-bold tw:text-gray-900 tw:mb-8 tw:text-center">Login Verification</h2>
+      <div class="tw:flex tw:justify-center tw:bg-white tw:relative tw:border-solid tw:border tw:border-gray-50 tw:shadow-sm tw:border tw:border-slate-100 tw:rounded-lg tw:max-w-lg tw:m-auto tw:p-8">
+        <div class="tw:max-w-sm tw:w-full">
 
-      <p class="text-black-500 my-4">We have sent you a verification code to your registered mobile number, please enter your 8-digit code in the box below to continue your login.<br>
+      <p class="tw:text-black-500 tw:my-4">We have sent you a verification code to your registered mobile number, please enter your 8-digit code in the box below to continue your login.<br>
       <br>  
       Didn't receive a SMS?<br>
       <br>
-      <a href="#" class="text-sm text-booker hover:text-booker font-bold">Click here to send a new code</a></p>
-                <div class="flex items-center p-4 mb-4 text-green-800 rounded-lg bg-green-50" role="alert">
-                  <div class="ms-3 text-sm font-bold">New login code has been sent via SMS</div>
-                  <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8" data-dismiss-target="#alert-3" aria-label="Close">
-                    <span class="sr-only">Close</span>
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+      <a href="#" class="tw:text-sm tw:text-booker tw:hover:text-booker tw:font-bold">Click here to send a new code</a></p>
+                <div class="tw:flex tw:items-center tw:p-4 tw:mb-4 tw:text-green-800 tw:rounded-lg tw:bg-green-50" role="alert">
+                  <div class="tw:ms-3 tw:text-sm tw:font-bold">New login code has been sent via SMS</div>
+                  <button type="button" class="tw:ms-auto tw:-mx-1.5 tw:-my-1.5 tw:bg-green-50 tw:text-green-500 tw:rounded-lg tw:focus:ring-2 tw:focus:ring-green-400 tw:p-1.5 tw:hover:bg-green-200 tw:inline-flex tw:items-center tw:justify-center tw:h-8 tw:w-8" data-dismiss-target="#alert-3" aria-label="Close">
+                    <span class="tw:sr-only">Close</span>
+                    <svg class="tw:w-3 tw:h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"></path>
                     </svg>
                   </button>
                 </div>
-                <div class="flex items-center p-4 mb-4 text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400" role="alert">
-                  <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <div class="tw:flex tw:items-center tw:p-4 tw:mb-4 tw:text-blue-800 tw:rounded-lg tw:bg-blue-50 tw:dark:bg-gray-800 tw:dark:text-blue-400" role="alert">
+                  <svg class="tw:flex-shrink-0 tw:w-4 tw:h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
                   </svg>
-                  <span class="sr-only">Info</span>
-                  <div class="ms-3 text-sm font-medium">
+                  <span class="tw:sr-only">Info</span>
+                  <div class="tw:ms-3 tw:text-sm tw:font-medium">
                     You will be able to request another code in 30 seconds
                   </div>
-                    <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8" data-dismiss-target="#alert-1" aria-label="Close">
-                      <span class="sr-only">Close</span>
-                      <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <button type="button" class="tw:ms-auto tw:-mx-1.5 tw:-my-1.5 tw:bg-blue-50 tw:text-blue-500 tw:rounded-lg tw:focus:ring-2 tw:focus:ring-blue-400 tw:p-1.5 tw:hover:bg-blue-200 tw:inline-flex tw:items-center tw:justify-center tw:h-8 tw:w-8" data-dismiss-target="#alert-1" aria-label="Close">
+                      <span class="tw:sr-only">Close</span>
+                      <svg class="tw:w-3 tw:h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"></path>
                       </svg>
                   </button>
                 </div>
-              <form class="space-y-4">
+              <form class="tw:space-y-4">
                 <div>
-                  <label class="block text-sm font-bold text-black-700">Verification Code</label>
+                  <label class="tw:block tw:text-sm tw:font-bold tw:text-black-700">Verification Code</label>
                   <input 
                     type="text" 
-                    class="w-full px-4 py-1.5 mt-2 mb-4 border border-gray-300 rounded-md focus:ring-2 focus:ring-booker-500 focus:border-booker-500 outline-none transition-all"
+                    class="tw:w-full tw:px-4 tw:py-1.5 tw:mt-2 tw:mb-4 tw:border tw:border-gray-300 tw:rounded-md tw:focus:ring-2 tw:focus:ring-booker-500 tw:focus:border-booker-500 tw:outline-none tw:transition-all"
                     required />
                 </div>
 
-                <button class="w-full bg-booker text-white font-bold py-2.5 rounded-md transition-colors">Verify</button>
-                <button class="w-full bg-gray text-black font-bold py-2.5 rounded-md transition-colors">Cancel</button>
+                <button class="tw:w-full tw:bg-booker tw:text-white tw:font-bold tw:py-2.5 tw:rounded-md tw:transition-colors">Verify</button>
+                <button class="tw:w-full tw:bg-gray tw:text-black tw:font-bold tw:py-2.5 tw:rounded-md tw:transition-colors">Cancel</button>
               </form>
     
             </div>
           </div>
           <footer>
-            <div id="copyright" class="mt-3 flex items-center justify-center p-8">
+            <div id="copyright" class="tw:mt-3 tw:flex tw:items-center tw:justify-center tw:p-8">
                 <p>&copy; Booker 2025 - CD2</p>
             </div>
             </footer>
