--- a/csp/index.html
+++ b/csp/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy"
-        content="script-src 'self' https://consent.cookiebot.com; 
-                 style-src 'self' 'unsafe-inline' https://consent.cookiebot.com;">
+      content="
+        default-src 'self';
+        script-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
+        style-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
+        connect-src https://*.cookiebot.com;
+        frame-src https://consent.cookiebot.com;">
   <title>Cookiebot Test</title>
 
   <script id="Cookiebot"
