--- a/csp/index.html
+++ b/csp/index.html
@@ -8,6 +8,7 @@
         default-src 'self';
         script-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
         style-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
+        img-src 'self' 'unsafe-inline' https://imgsct.cookiebot.com;
         connect-src https://*.cookiebot.com;
         frame-src https://consent.cookiebot.com;">
   <title>Cookiebot Test</title>
