--- a/csp/index.html
+++ b/csp/index.html
@@ -10,7 +10,7 @@
         style-src 'self' 'unsafe-inline' https://consent.cookiebot.com;
         img-src 'self' https://imgsct.cookiebot.com;
         connect-src https://*.cookiebot.com;
-        frame-src https://consent.cookiebot.com;">
+        frame-src https://consent.cookiebot.com https://consentcdn.cookiebot.com;">
 
   <title>Cookiebot Test</title>
 
