--- a/deliverycutoff/index.html
+++ b/deliverycutoff/index.html
@@ -105,7 +105,7 @@
                 
                 <div id="counters-non-facia" class="col d-flex">
                   <div id="non-facia-order-counter" class="d-flex mx-3">
-                      <div class="title title non-facia-title">
+                      <div class="title non-facia-title">
                           <p class="mb-0 font-weight-bold">DELIVERY DATE</p>
                           <p class="mb-0 non-facia-date">MON 09 DEC</p>
                       </div>
@@ -136,7 +136,7 @@
                       </div>
                   </div>
                   <div id="non-facia-order-counter" class="d-flex mx-3">
-                      <div class="title title non-facia-title">
+                      <div class="title non-facia-title">
                           <p class="mb-0 font-weight-bold">DELIVERY DATE</p>
                           <p class="mb-0 non-facia-date">THU 12 DEC </p>
                       </div>
@@ -167,7 +167,7 @@
                       </div>
                   </div>
                   <div id="non-facia-order-counter" class="d-flex mx-3">
-                    <div class="title title non-facia-title">
+                    <div class="title non-facia-title">
                         <p class="mb-0 font-weight-bold">DELIVERY DATE</p>
                         <p class="mb-0 non-facia-date">SUN 15 DEC </p>
                     </div>
@@ -1153,7 +1153,17 @@
     }
     header.shopping-header #counters-non-facia .counter {
         padding-left: 0.5em;
+        margin-top: -5px;
     }
+
+    header.shopping-header #counters-non-facia .title p:nth-child(2) {
+        margin-top: 0;
+    }
+
+    header.shopping-header #counters-non-facia .non-facia-title .non-facia-date {
+        color: #000;
+    }
+
     .cs-advert {
     max-width: 1500px;
     margin-top: 1rem;
