--- a/presell-management/index.html
+++ b/presell-management/index.html
@@ -84,8 +84,8 @@
     Caterer / Retailer
   </div>
   <div class="col-6">
-    <select name="Year">
-      <option value="">Not Applicable</option>
+   <select name="isCatererOrRetailer" id="isCatererOrRetailer">
+      <option value="notApplicable">Not Applicable</option>
       <option value="caterer">Caterer</option>
       <option value="retailer">Retailer</option>
     </select>
