--- a/presell-management/index.html
+++ b/presell-management/index.html
@@ -354,6 +354,77 @@
 <input type="text" name="DropDescription6" maxlength="50" value="" class="form-control" placeholder="Description" />
 </div>
 </div>
+
+<div class="row d-flex align-items-center mb-3">
+  <div class="col-6">
+  <label class="mb-0 d-block">Drop 7</label>
+  </div>
+  <div class="col-3 text-left">
+  <label class="mb-0 d-block">Required?</label>
+  </div>
+  <div class="col-3 text-left">
+  
+  <input type="checkbox" name="Required7" />
+  </div>
+  </div>
+  <div class="row d-flex align-items-center mb-3">
+  <div class="col-6">
+  &nbsp;
+  </div>
+  <div class="col-3 text-left">
+  <label class="mb-0 d-block">Drop Date</label>
+  </div>
+  <div class="col-3 text-left">
+  <input type="text" name="DropDate7" maxlength="10" value="" class="form-control" placeholder="dd/MM/yyyy" />
+  </div>
+  </div>
+  <div class="row d-flex align-items-center mb-3">
+  <div class="col-6">
+  &nbsp;
+  </div>
+  <div class="col-3 text-left">
+  <label class="mb-0 d-block">Description</label>
+  </div>
+  <div class="col-3 text-left">
+  <input type="text" name="DropDescription7" maxlength="50" value="" class="form-control" placeholder="Description" />
+  </div>
+  </div>
+
+  <div class="row d-flex align-items-center mb-3">
+    <div class="col-6">
+    <label class="mb-0 d-block">Drop 8</label>
+    </div>
+    <div class="col-3 text-left">
+    <label class="mb-0 d-block">Required?</label>
+    </div>
+    <div class="col-3 text-left">
+    
+    <input type="checkbox" name="Required8" />
+    </div>
+    </div>
+    <div class="row d-flex align-items-center mb-3">
+    <div class="col-6">
+    &nbsp;
+    </div>
+    <div class="col-3 text-left">
+    <label class="mb-0 d-block">Drop Date</label>
+    </div>
+    <div class="col-3 text-left">
+    <input type="text" name="DropDate8" maxlength="10" value="" class="form-control" placeholder="dd/MM/yyyy" />
+    </div>
+    </div>
+    <div class="row d-flex align-items-center mb-3">
+    <div class="col-6">
+    &nbsp;
+    </div>
+    <div class="col-3 text-left">
+    <label class="mb-0 d-block">Description</label>
+    </div>
+    <div class="col-3 text-left">
+    <input type="text" name="DropDescription8" maxlength="50" value="" class="form-control" placeholder="Description" />
+    </div>
+    </div>
+    
 <div class="buttons">
 <button type="submit" class="btn">Save Header</button>
 </div>
@@ -368,6 +439,6 @@
 <div class="mt-3 mb-3 main">
 <a href="/admin/portal">Return to Portal</a>
 </div>
-  <script src="./caterer-presell-admin.js" nonce=""></script>
+<script src="./caterer-presell-admin.js" nonce=""></script>
 </body>
 </html>
