--- a/presell-management/load-header/index.html
+++ b/presell-management/load-header/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html>
@@ -82,13 +81,13 @@
           </div>
       </div>
 
-    <div id="divTsAndCs" class="divTsAndCs">
+    <div id="divTsAndCs" class="divTsAndCs d-none">
       <div class="row d-flex align-items-center mb-3">
           <div class="col-6">
               <label class="mb-0 d-block">Terms and Conditions document</label>
           </div>
           <div class="col-6 text-left">
-              <input type="file" name="fileTsAndCs" />
+              <input type="file" id="fileTsAndCs" name="fileTsAndCs" disabled />
           </div>
       </div>
 
@@ -97,7 +96,7 @@
             <label class="mb-0 d-block">Terms and Conditions text</label>
         </div>
         <div class="col-6 text-left">
-            <textarea type="text" name="textTsAndCs" rows="4" cols="50"></textarea>
+            <textarea type="text" id="textTsAndCs" name="textTsAndCs" rows="4" cols="50" disabled></textarea>
         </div>
       </div>
     </div>
@@ -120,11 +119,11 @@
     document.querySelector('#checkboxTsAndCs').addEventListener('click', (event) => {
        const isCheckBoxTsAndCs = document.getElementById('checkboxTsAndCs');
        const divTsAndCs = document.querySelector('#divTsAndCs');
-       if (isCheckBoxTsAndCs.checked === true) {
-        divTsAndCs.classList.remove('d-none');
-       } else {
-        divTsAndCs.classList.add('d-none');
-       }
+       const fileTsAndCs = document.getElementById('fileTsAndCs');
+       const textTsAndCs = document.getElementById('textTsAndCs');
+       divTsAndCs.classList.toggle('d-none');
+       fileTsAndCs.disabled = !fileTsAndCs.disabled;
+       textTsAndCs.disabled = !textTsAndCs.disabled;
     });
     
   </script>
