--- a/presell/front-end/index.html
+++ b/presell/front-end/index.html
@@ -1024,6 +1024,17 @@ System.Web.Mvc.StyleContext;
         font-size: 10px;
     }
 
+     #agreeTsAndCsCheck {
+        position: relative;
+        margin-top: 0;
+        margin-left: 0;
+    }
+
+    label[for="agreeTsAndCsCheck"] a {
+        color: #062F6E;
+        font-weight: bold;
+    }
+
     @media  (max-width: 1150px) {
         main#presell_button .mobile-view .product-quantity-date-header p {
             font-size: 10px;
@@ -1069,15 +1080,13 @@ System.Web.Mvc.StyleContext;
 </style>
 <main id="presell_button" class="main mt-3">
     <div class="row">
-        <div class="col-xs-12 col-lg-6">
+        <div class="col-xs-12">
             <h2>Pre-Sell: Christmas 2025</h2>
             <h2>Closing Date: Monday 1st September 2025</h2>
-        </div>
-        <div class="col-xs-12 col-lg-6 d-inline-flex">
-            <div class="form-check">
+             <div class="form-check">
                 <input class="form-check-input" type="checkbox" name="agreeTsAndCs" id="agreeTsAndCsCheck">
                 <label class="form-check-label" for="agreeTsAndCsCheck">I have read and agree to the terms and conditions <a class="font-bold" href="#" target="_blank">HERE</a></label>
-            </div>
+            </div> 
         </div>
     </div>
 <form action="/products/presell-product-list?ordername=1342" method="post">        <div id="buttons-bottom" class="text-right mb-sm-0 row d-lg-flex justify-content-lg-end justify-content-sm-end header-buttons pr-0 pb-md-0 mb-md-3 col mt-3">
